// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextField > matches snapshot for large size 1`] = `
<div
  class="MuiFormControl-root MuiTextField-root css-7mopvj-MuiFormControl-root-MuiTextField-root"
  style="width: 32rem;"
>
  <label
    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-filled MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-filled css-1u43uf3-MuiFormLabel-root-MuiInputLabel-root"
    data-shrink="false"
    for="_r_9_"
    id="_r_9_-label"
  >
    Search documents
  </label>
  <div
    class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-jdpu6s-MuiInputBase-root-MuiFilledInput-root"
  >
    <input
      aria-invalid="false"
      class="MuiInputBase-input MuiFilledInput-input css-voecp4-MuiInputBase-input-MuiFilledInput-input"
      id="_r_9_"
      type="text"
    />
  </div>
</div>
`;

exports[`TextField > matches snapshot for medium size 1`] = `
<div
  class="MuiFormControl-root MuiTextField-root css-7mopvj-MuiFormControl-root-MuiTextField-root"
  style="width: 20rem;"
>
  <label
    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-filled MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-filled css-1u43uf3-MuiFormLabel-root-MuiInputLabel-root"
    data-shrink="false"
    for="_r_7_"
    id="_r_7_-label"
  >
    Search documents
  </label>
  <div
    class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-jdpu6s-MuiInputBase-root-MuiFilledInput-root"
  >
    <input
      aria-invalid="false"
      class="MuiInputBase-input MuiFilledInput-input css-voecp4-MuiInputBase-input-MuiFilledInput-input"
      id="_r_7_"
      type="text"
    />
  </div>
</div>
`;

exports[`TextField > matches snapshot for small size 1`] = `
<div
  class="MuiFormControl-root MuiTextField-root css-7mopvj-MuiFormControl-root-MuiTextField-root"
  style="width: 12rem;"
>
  <label
    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-filled MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-filled css-1u43uf3-MuiFormLabel-root-MuiInputLabel-root"
    data-shrink="false"
    for="_r_5_"
    id="_r_5_-label"
  >
    Search documents
  </label>
  <div
    class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-jdpu6s-MuiInputBase-root-MuiFilledInput-root"
  >
    <input
      aria-invalid="false"
      class="MuiInputBase-input MuiFilledInput-input css-voecp4-MuiInputBase-input-MuiFilledInput-input"
      id="_r_5_"
      type="text"
    />
  </div>
</div>
`;
